--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,10 @@ nav a:hover {
     left: 50%;
     transform: translate(-50%, -50%);
     opacity: 0.8;
+
+    h1 {
+        padding-bottom: 30px;
+    }
 }
 
 #about {
@@ -97,8 +101,9 @@ nav a:hover {
 }
 
 .description p {
-    padding: 10px;
+    padding: 0 10px;
     font-size: 1.3rem;
+    margin-top: 0;
 }
 
 .info {
