Add media queries targeting small mobile devices (width < 768px)

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,7 @@ nav a:hover {
 }
 
 .languages>div {
-    margin: 50px;
+    margin: 50px auto;
     display: flex;
     justify-content: space-between;
 }
@@ -321,6 +321,126 @@ footer {
     text-align: center;
     background: linear-gradient(#323333, #2a2b2b);
     padding: 2rem 0;
+}
+
+
+@media only screen and (max-width: 768px) {
+
+    /* Hero section */
+    .hero-text {
+        width: 80%;
+        /* Reduce hero text width */
+        padding: 10px;
+        /* Adjust padding for smaller screens */
+    }
+
+    #about,
+    .sections-div,
+    .skills-flex,
+    .languages>div,
+    .contact-flex {
+        width: 80%;
+        height: 950px;
+        flex-direction: column;
+        /* Stack sections vertically */
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .description {
+        width: 100%;
+
+        p {
+            margin-bottom: 60px;
+        }
+    }
+
+    .sections-div {
+        height: 760px;
+
+        >div {
+            width: 90%;
+        }
+
+        .sect-img {
+            width: 40%;
+            height: 50%;
+        }
+    }
+
+    .skills-flex {
+        width: 90%;
+        height: 600px;
+
+
+    }
+
+    .skills-flex>div {
+        width: 100%;
+
+        p {
+            margin-top: 50px;
+        }
+    }
+
+    .skills-flex .flex-chart {
+        width: 100%;
+
+        div {
+            width: auto;
+        }
+    }
+
+    .languages>div {
+        justify-content: space-around;
+    }
+
+    #portfolio {
+        width: 85%;
+        height: auto;
+
+        /* Portfolio grid */
+        .portfolio-grid {
+            grid-template-columns: 1fr;
+            /* Single column for portfolio items */
+            grid-gap: 50px;
+        }
+    }
+
+    .contact-flex {
+        height: 850px;
+    }
+
+    .contact-flex>div {
+        width: 100%;
+
+        p {
+            margin-top: 50px;
+        }
+    }
+
+    .social {
+
+        img {
+            width: 50px;
+        }
+
+        .social-img {
+            width: 50%;
+        }
+    }
+
+    /* Form */
+    .form input[type="text"],
+    .form textarea {
+        width: 100%;
+        padding: 20px;
+        /* Reduce input field width */
+    }
+
+    footer {
+        font-size: 1.3rem;
+    }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
