--- a/css/styles.css
+++ b/css/styles.css
@@ -349,6 +349,7 @@ footer {
 
     .description {
         width: 100%;
+        margin-bottom: 50px;
 
         p {
             margin-bottom: 60px;
