--- a/css/styles.css
+++ b/css/styles.css
@@ -326,8 +326,8 @@ footer {
 
 @media only screen and (max-width: 768px) {
 
-    html {
-        width: 100%;
+    body {
+        width: 100vh;
     }
 
     /* Hero section */
